GearsetPOC/force-app/main/default/objects/Passing_Point__c/Passing_Point__c.object-meta.xml
<CustomObject>
    <description>Passing Points for Train Services</description>
    <label>Passing Point</label>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Passing Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passing Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>