GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Arrival_Commercial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Commercial_Reason__c</fullName>
    <label>Arrival Commercial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>