GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time__c</fullName>
    <label>Arrival Date Time</label>
    <type>DateTime</type>
</CustomField>