GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Arrival_Force_Majeure__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Force_Majeure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrival Force Majeure</label>
    <type>Checkbox</type>
</CustomField>