GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Commercial_Gesture__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Gesture__c</fullName>
    <formula>IF( OR(  No_Catering__c , Unacceptable_Travel_Conditions__c) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Gesture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>