GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/No_Catering__c.field-meta.xml
<CustomField>
    <fullName>No_Catering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Catering</label>
    <type>Checkbox</type>
</CustomField>