GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Passing_Point_Cash__c.field-meta.xml
<CustomField>
    <fullName>Passing_Point_Cash__c</fullName>
    <label>% Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>