GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/PassingPoint_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>PassingPoint_Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>due to a cable theft</fullName>
            </value>
            <value>
                <fullName>due to a case of force majeure</fullName>
            </value>
            <value>
                <fullName>due to a delay in the food and beverage supply</fullName>
            </value>
            <value>
                <fullName>due to a failure of the rolling materiel</fullName>
            </value>
            <value>
                <fullName>due to a strike</fullName>
            </value>
            <value>
                <fullName>due to a technical incident</fullName>
            </value>
            <value>
                <fullName>due to an accident involving people</fullName>
            </value>
            <value>
                <fullName>due to an alarm signal</fullName>
            </value>
            <value>
                <fullName>due to an incident on the infrastructure</fullName>
            </value>
            <value>
                <fullName>due to an unplanned strike</fullName>
            </value>
            <value>
                <fullName>due to bad weather conditions</fullName>
            </value>
            <value>
                <fullName>due to difficulties in coordination</fullName>
            </value>
            <value>
                <fullName>due to the intervention of the authorities</fullName>
            </value>
            <value>
                <fullName>due to the presence of a suspicious object</fullName>
            </value>
            <value>
                <fullName>due to the presence of an obstacle on the tracks</fullName>
            </value>
            <value>
                <fullName>due to the presence of animals on the tracks</fullName>
            </value>
            <value>
                <fullName>due to the presence of people on the tracks</fullName>
            </value>
            <value>
                <fullName>due to track works</fullName>
            </value>
            <value>
                <fullName>due to traffic problems</fullName>
            </value>
            <value>
                <fullName>due to vandalism</fullName>
            </value>
            <value>
                <fullName>Magical incident type</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>SNCB</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>