GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/PassingPoint_Departure_Delay__c.field-meta.xml
<CustomField>
    <fullName>PassingPoint_Departure_Delay__c</fullName>
    <label>Departure Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>