GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/PassingPoint_not_Served__c.field-meta.xml
<CustomField>
    <fullName>PassingPoint_not_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Served</label>
    <type>Checkbox</type>
</CustomField>