GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/PassingPoint_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>PassingPoint_Station_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station Name</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Passing Points</relationshipLabel>
    <relationshipName>Passing_Points</relationshipName>
    <type>Lookup</type>
</CustomField>