GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/PassingPoint_Voucher__c.field-meta.xml
<CustomField>
    <fullName>PassingPoint_Voucher__c</fullName>
    <label>% Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>