GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/s3_passing_point_ext_ref__c.field-meta.xml
<CustomField>
    <fullName>s3_passing_point_ext_ref__c</fullName>
    <externalId>true</externalId>
    <label>S3 Passing Point Ext Ref</label>
    <length>250</length>
    <type>Text</type>
</CustomField>