GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Station_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Station_Sequence__c</fullName>
    <label>Station Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>