GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Total_Passing_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Passing_Points__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Passing Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>