GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Train_Expert__c.field-meta.xml
<CustomField>
    <fullName>Train_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Train Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Passing_Points</relationshipName>
    <type>Lookup</type>
</CustomField>