GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/UIC_Code__c.field-meta.xml
<CustomField>
    <fullName>UIC_Code__c</fullName>
    <label>UIC Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>