GearsetPOC/force-app/main/default/objects/Passing_Point__c/fields/Unacceptable_Travel_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Unacceptable_Travel_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unacceptable Travel Conditions</label>
    <type>Checkbox</type>
</CustomField>